<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/Food"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="Food" />
        <item
            android:id="@+id/clothes"
            android:icon="@drawable/clothes"
            android:title="Clothe" />
        <item
            android:id="@+id/Donorregistration"
            android:icon="@drawable/donate"
            android:title="@string/DONATE_NOW" />
        <item
            android:id="@+id/Aceptorregistration"
            android:icon="@drawable/acceptor"
            android:title="@string/ACEPT_NOW" />
    </group>
</menu>