<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrationdonating"
    android:background="@drawable/backgroundimage"

    >

    <TextView
        android:id="@+id/donate"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:textColor="#000000"
        android:layout_marginTop="28dp"
        android:layout_marginRight="6dp"
        android:text="@string/DONATE_THINGS"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"

        android:gravity="center_horizontal" />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:layout_below="@id/donate"
        android:inputType="textPersonName"
        android:background="@drawable/et_custom"
        android:textSize="15sp"

        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:layout_below="@id/et_name"
        android:inputType="textPersonName"
        android:background="@drawable/et_custom"
        android:textSize="15sp"

        />
    <EditText
        android:id="@+id/contactinfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/contact"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:layout_below="@id/email"
        android:inputType="textPersonName"
        android:background="@drawable/et_custom"
        android:textSize="15sp"

        />

    <TextView
        android:id="@+id/select"
        android:layout_width="310dp"
        android:layout_height="58dp"
        android:layout_below="@id/contactinfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="80dp"
        android:text="@string/DONATE_NOW"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"


        />

    <CheckBox
        android:id="@+id/c1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select"

        android:text="CLOTHES"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"

        />
    <CheckBox
        android:id="@+id/c2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/c1"

        android:text="FOOD"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"

        />
    <CheckBox
        android:id="@+id/c3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/c2"

        android:text="BLOOD"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"

        />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/c3"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:text="Description"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/des"
        android:layout_width="394dp"
        android:layout_height="144dp"
        android:layout_below="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"

        android:layout_marginLeft="7dp"
        android:hint="comments"
        android:gravity="start"

        android:layout_marginTop="18dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/et_custom" />

    <Button
        android:layout_width="251dp"
        android:layout_height="69dp"
        android:layout_below="@id/des"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="88dp"
        android:text="SUBMIT"

        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@drawable/buttons"

        />


</RelativeLayout>